# integration_layer_tilda_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  reference_request
alembic/: env.py
alembic/versions/: 07fcfd6c785e_add_data.py  1c9f2a4d7d6d_add_stored_file_name_to_tilda_job.py  205d1a614f25_init.py  38dade08a2a6_init.py  40750a96ae6e_init.py  4af782aa7c33_add_column.py  50ea8b8cb364_init_tilda_tables.py  7980139eea9c_add_data.py  7de261471407_init.py  a10d74bec293_init.py  bc7a25cfab74_init.py
api/: app.py
application/: accept_tilda_webhook.py  process_next_tilda_job.py
application/constants/: tilda_job_status.py
application/dto/: accept_tilda_webhook.py  process_next_tilda_job.py
application/mappers/: __init__.py  error_mapper.py
database/: base.py  provider.py
database/models/: tilda_job.py  tilda_job_status.py  tilda_job_status_his.py
exceptions/: __init__.py  database.py  file.py  storage.py  tilda.py
infrastructure/: file_downloader.py  google_drive_client.py  nextcloud_file_storage.py  vps_file_storage.py
infrastructure/database/: base.py  provider.py  reference_data.py
infrastructure/downloader/: __init__.py  content_validator.py  file_downloader.py  file_name_resolver.py  request_utils.py  source_resolver.py
infrastructure/dto/: __init__.py  downloaded_file.py  stored_file_result.py
infrastructure/kafka/: provider.py
infrastructure/uploader/: __init__.py  nextcloud_file_storage.py  path_utils.py  (+1 more)
setting/: __init__.py  config.py  logging.py
worker/: __init__.py  main.py
(+18 files in other folders)
